.content.m-collapsed margin-left is corrected

--- a/src/sass/content/_content.sass
+++ b/src/sass/content/_content.sass
@@ -12,7 +12,7 @@
     margin-left: calc(#{$w_nav} + #{$p_container_laptop})
     align-self: center
     +tablet-down
-      margin-left: calc(#{$w_nav} + #{$p_container_tablet})
+      margin-left: calc(#{$w_nav_tablet} + #{$p_container_tablet})
   &.m-sm
     margin-left: $w_left_side_m_sm
   &-in
@@ -21,7 +21,6 @@
     height: 100%
     &.m-sm
       padding: 0px 40px
-
 
   &__center
     flex-grow: 1
@@ -49,5 +48,3 @@
     +laptop-album-down
       justify-content: center
       flex-direction: column
-
-
