--- a/src/sass/content/_services.sass
+++ b/src/sass/content/_services.sass
@@ -19,3 +19,8 @@
 
   .breadcrumbs
     width: 915px
+    
+@media screen and (max-height: 825px)
+  .content-services
+    .content-item__img
+      display: none
