--- a/src/sass/general/components.sass
+++ b/src/sass/general/components.sass
@@ -8,6 +8,8 @@
   height: 30%
   min-width: 226px
   min-height: 30px
+  max-width: 422px
+  max-height: 233px
   +laptop-album-down
     max-height: 210px
     width: 49%
